# Astraeus

./: .coverage  .gitignore  CITATION.cff  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.github/workflows/: ci.yml
_sources/: index.rst.txt
_sources/api/: astraeus.hdf5IO.Data.rst.txt  astraeus.hdf5IO.readH5.rst.txt  astraeus.xarrayIO.makeFluxLikeDA.rst.txt  astraeus.xarrayIO.makeLCDA.rst.txt  astraeus.xarrayIO.makeTimeLikeDA.rst.txt  astraeus.xarrayIO.makeWaveLikeDA.rst.txt  astraeus.xarrayIO.readXR.rst.txt
api/: astraeus.hdf5IO.Data.html  astraeus.hdf5IO.readH5.html  astraeus.hdf5IO.writeH5.html  astraeus.xarrayIO.concat.html  astraeus.xarrayIO.makeDataset.html  astraeus.xarrayIO.makeFluxLikeDA.html  astraeus.xarrayIO.makeLCDA.html  astraeus.xarrayIO.makeTimeLikeDA.html  astraeus.xarrayIO.makeWaveLikeDA.html  astraeus.xarrayIO.readXR.html  astraeus.xarrayIO.writeXR.html
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: astraeus.hdf5IO.Data.doctree  astraeus.hdf5IO.readH5.doctree  astraeus.hdf5IO.writeH5.doctree  astraeus.xarrayIO.concat.doctree  astraeus.xarrayIO.makeDataset.doctree  astraeus.xarrayIO.makeFluxLikeDA.doctree  astraeus.xarrayIO.makeLCDA.doctree  astraeus.xarrayIO.makeTimeLikeDA.doctree  astraeus.xarrayIO.makeWaveLikeDA.doctree  astraeus.xarrayIO.readXR.doctree  astraeus.xarrayIO.writeXR.doctree  astreus.example.add_one.doctree  astreus.hdf5IO.Data.doctree  astreus.hdf5IO.readH5.doctree  astreus.hdf5IO.writeH5.doctree  astreus.xarrayIO.makeDataset.doctree  (+5 more)
docs/_build/html/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/api/: astraeus.hdf5IO.writeH5.rst  astraeus.xarrayIO.writeXR.rst
src/: .coverage
src/Astraeus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/astraeus/: __init__.py  dataset.py  hdf5IO.py  xarrayIO.py
src/astreus/: hdf5IO.py  xarrayIO.py
tests/: test_example.py  test_h5.py  test_xr.py
(+33 files in other folders)
