[metadata]
name = Astreus
version = 0.0.1
author = Kevin B. Stevenson
author_email = kevin.stevenson@jhuapl.edu
description = Exoplanet Data Reduction I/O
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/kevin218/Astreus
project_urls =
    Bug Tracker = https://github.com/kevin218/Astreus/issues
    Sourse Code = https://github.com/kevin218/Astreus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"

[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
