[metadata]
name = Astraeus
version = 0.3
author = Kevin B. Stevenson
author_email = kbstevenson@gmail.com
description = Exoplanet Data Reduction I/O
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/kevin218/Astraeus
project_urls =
    Bug Tracker = https://github.com/kevin218/Astraeus/issues
    Source Code = https://github.com/kevin218/Astraeus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.8

# Example of how to add dependencies:
install_requires =
    h5py
    xarray
    dask
    netCDF4
    h5netcdf
    bottleneck

[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
